feat: test send noti route
